Measure deduplication: shared utilities, kill abstractions, remove Either3
Phase 1: Extract shared utilities
- Extract R4ConceptDefs + Dstu3ConceptDefs: kill 5 copies of
  conceptDefToConcept/codeDefToCoding down to 2 (one per FHIR version)
- Consolidate DateHelper: remove duplicated buildMeasurementPeriodInterval
  and convertToDateTime from R4DateHelper (delegates to shared DateHelper)
- Resolver parameter dedup: documented as symmetric (can't share due to
  version-specific Parameters types)

Phase 2: Kill unnecessary abstractions
- Delete R4CareGapsServiceInterface, R4CareGapsService,
  R4CareGapsProcessorInterface — 3 pure delegation layers with zero value
- Remove Either3 parameter lifting from CareGaps: accept three separate
  measure lists (id, identifier, url) directly
- Remove Either3 from R4MultiMeasureService single-measure path: accept
  IdType directly, resolve Measure internally
- Convert R4CareGapsParameters from mutable POJO to record
- Replace Dstu3PopulationBasisValidator stub with PopulationBasisValidator.NOOP

Net: +235 -521 across 30 files. Three interface files and two stub files deleted.